--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ nav {
     width: 100%;
     height: 100vh;
     min-height: 970px;
-    background-image: url(ressources/cur.PNG);
+    background-image: url(ressources/campuspoly.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
